cabal-version: 2.4
name:          webauthn
version:       0.0.2
synopsis:      Web Authentication API
homepage:      https://github.com/fumieval/webauthn
bug-reports:   https://github.com/fumieval/webauthn/issues
license:       BSD-3-Clause
license-file:  LICENSE
author:        Fumiaki Kinoshita, Sumit Raja <sumitraja@gmail.com>
maintainer:    fumiexcel@gmail.com
category:      Web
tested-with:    GHC == 8.8.4
              , GHC == 8.10.4

common base-common
  build-depends:
    , aeson             >=1.4   && <1.6
    , base              >=4.13  && <4.15
    , base64            >=0.4.2 && <0.5
    , bytestring        >=0.10  && <0.12
    , errors            >=2.3   && <2.4
    , x509-store        >=1.6   && <1.7
  default-language: Haskell2010
  default-extensions:
      LambdaCase
    , DerivingStrategies
    , DuplicateRecordFields
    , NamedFieldPuns
    , OverloadedStrings
    , RecordWildCards
    , ScopedTypeVariables

library
  import:             base-common
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:
    WebAuthn
    WebAuthn.Assertion
    WebAuthn.Attestation
    WebAuthn.Attestation.Statement.AndroidSafetyNet
    WebAuthn.Attestation.Statement.FIDOU2F
    WebAuthn.Attestation.Statement.Packed
    WebAuthn.Attestation.Statement.TPM
    WebAuthn.AuthenticatorData
    WebAuthn.Common
    WebAuthn.Signature
    WebAuthn.Types
  build-depends:
    , asn1-encoding     >=0.9   && <0.10
    , asn1-types        >=0.3   && <0.4
    , cborg             >=0.2   && <0.3
    , cereal            >=0.5   && <0.6
    , containers        >=0.6   && <0.7
    , cryptonite        >=0.27  && <0.29
    , hashable          >=1.3   && <1.4
    , memory            >=0.14  && <1.16
    , serialise         >=0.2   && <0.3
    , text              >=1.2   && <1.3
    , transformers      >=0.5   && <0.6
    , x509              >=1.7   && <1.8
    , x509-validation   >=1.6   && <1.7

test-suite test-webauthn
  import:             base-common
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Tests.hs
  build-depends:
    , interpolate    >=0.2  && <0.3
    , tasty          >=1.2  && <1.5
    , tasty-hunit    >=0.10 && <0.11
    , uri-bytestring >=0.3  && <0.4
    , webauthn
