cabal-version: 2.4
name:          webauthn
version:       0.0.2
synopsis:      Web Authentication API
homepage:      https://github.com/fumieval/webauthn
bug-reports:   https://github.com/fumieval/webauthn/issues
license:       BSD-3-Clause
license-file:  LICENSE
author:        Fumiaki Kinoshita, Sumit Raja <sumitraja@gmail.com>
maintainer:    fumiexcel@gmail.com
category:      Web
tested-with:   GHC == 9.2.1

common base-common
  build-depends:
    , aeson             ^>=2.0
    , base              >=4.16 && <4.17
    , base64-bytestring >=1.2  && <1.3
    , bytestring        >=0.10 && <0.12
    , errors            >=2.3  && <2.4
    , x509-store        >=1.6  && <1.7
    , hourglass         ^>= 0.2
  default-language:   Haskell2010
  default-extensions:
      LambdaCase
    , DerivingStrategies
    , DuplicateRecordFields
    , NamedFieldPuns
    , OverloadedStrings
    , RecordWildCards
    , ScopedTypeVariables

library
  import:             base-common
  hs-source-dirs:     src
  exposed-modules:
    WebAuthn
    WebAuthn.AuthenticatorData
    WebAuthn.Assertion
    WebAuthn.Attestation
    WebAuthn.Base
    WebAuthn.Attestation.Statement.AndroidSafetyNet
    WebAuthn.Attestation.Statement.FIDOU2F
    WebAuthn.Attestation.Statement.Packed
    WebAuthn.Attestation.Statement.TPM
    WebAuthn.Signature
    WebAuthn.Types
  build-depends:
    , asn1-encoding     >=0.9  && <0.10
    , asn1-types        >=0.3  && <0.4
    , base16-bytestring >=0.1.1.7  && <1.3
    , cborg             >=0.2  && <0.3
    , cereal            >=0.5  && <0.6
    , deriving-aeson    ^>= 0.2
    , containers        >=0.6  && <0.7
    , cryptonite        >=0.29 && <0.30
    , hashable          >=1.3  && <1.4
    , memory            >=0.14 && <1.16
    , serialise         >=0.2  && <0.3
    , text              >=1.2  && <1.3
    , transformers      >=0.5  && <0.6
    , x509              >=1.7  && <1.8
    , x509-validation   >=1.6  && <1.7

  ghc-options:        -Wall -Wcompat
  default-extensions:
    ImportQualifiedPost
    GeneralisedNewtypeDeriving
    DeriveGeneric
    RecordWildCards
    ScopedTypeVariables

test-suite test-webauthn
  import:             base-common
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Tests.hs
  build-depends:
    , interpolate    >=0.2  && <0.3
    , tasty          >=1.2  && <1.5
    , tasty-hunit    >=0.10 && <0.11
    , uri-bytestring >=0.3  && <0.4
    , webauthn
